--- a/package.json
+++ b/package.json
@@ -13,16 +13,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "sqlite3": "^5.1.6",
     "node-cron": "^3.0.3",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "openai": "^4.20.1",
-    "speech-recognition": "^0.0.1",
-    "node-speech-to-text": "^0.1.0",
-    "say": "^0.16.0",
-    "robotjs": "^0.6.0",
-    "opencv4nodejs": "^5.6.0"
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
