feat(core): implement evolutionary virtual android with multi-language support
- Add C++ core library build configuration with CMake
- Introduce Rust package with dependencies for performance modules
- Add comprehensive EVACore.js initialization for evolutionary systems including lease manager,
  backup brain, communication hub, policy engine, knowledge fusion, and network intelligence
- Implement multi-language integration bridge supporting Python, Rust, C++, and JavaScript
- Provide extensive evolutionary virtual android architecture documentation and completion status
- Extend package.json for multi-language scripts, dependencies, and metadata
- Add Python dependency requirements for AI/ML and networking capabilities
- Enhance EVACore.js with methods for consciousness backup, EVA unit creation, policy-based
  processing, knowledge fusion, semantic search, connection management, and multi-language task handling
- Initialize and coordinate core AI modules across languages with advanced backup and restoration features
- Deliver multi-protocol communication, distributed processing, and autonomous decision-making capabilities

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "eva-assistant",
-  "version": "1.0.0",
-  "description": "EVA - Enhanced Virtual Assistant - Your Living AI Companion",
+  "version": "2.0.0",
+  "description": "EVA - Evolutionary Virtual Android - Multi-Language AI System",
   "main": "src/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node src/server/main.js"
+    "start": "node src/server/main.js",
+    "python": "python src/python/eva_core.py",
+    "rust": "cargo run --manifest-path Cargo.toml",
+    "cpp": "cmake -B build && cmake --build build",
+    "test": "node src/tests/multi-language-test.js",
+    "test:python": "python -m pytest src/python/tests/",
+    "test:rust": "cargo test",
+    "test:cpp": "cd build && ctest",
+    "install:python": "pip install -r requirements.txt",
+    "install:rust": "cargo build",
+    "install:cpp": "cmake -B build"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,5 +30,27 @@
   "devDependencies": {
     "vite": "^5.0.0",
     "nodemon": "^3.0.2"
-  }
+  },
+  "keywords": [
+    "ai",
+    "virtual-assistant", 
+    "evolutionary-ai",
+    "multi-language",
+    "python",
+    "rust",
+    "cpp",
+    "javascript",
+    "machine-learning",
+    "performance"
+  ],
+  "engines": {
+    "node": ">=18.0.0",
+    "python": ">=3.9",
+    "rust": ">=1.70"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/eva.git"
+  },
+  "license": "MIT"
 }
